# kaanhbin_dualArm

./: .gitignore  CMakeLists.txt  CMakeLists_aris.txt  assemcomd.cpp  assemcomd.h  assemcomd.hpp  communication.cpp  communication.hpp  curve.cpp  curve.hpp  datacomd.cpp  datacomd.hpp  force.cpp  force.hpp  gravcomp.cpp  gravcomp.hpp  kaanh.xml  main.cpp  movel.cpp  movel.hpp  myir_build.sh  myirbackup.sh  plan.cpp  plan.hpp  release-myirbackup.sh  release_build.sh  releasebackup.sh  rivetcomd.cpp  rivetcomd.hpp  robot.cpp  robot.hpp  searchDir.cpp  searchDir.hpp  test.cpp  test.hpp
config/: kaanhbin_version.h.in
doc/drivercsv/: QNRC.csv  QNRD.csv  QNRD6.csv
doc/model3d/: model3d.xml
examples/: main.cpp  template.cpp  template.hpp  xml改动说明文档.xml
models/: best_model_LSTM1.pth  lstm.pth
search_test/0_degree/: searchTest_2025-03-18--16-48-24.txt  searchTest_2025-03-18--16-50-49.txt  searchTest_2025-03-18--16-56-37.txt  searchTest_2025-03-18--16-58-19.txt
search_test/30_degree/: searchTest_2025-03-18--17-02-04.txt  searchTest_2025-03-18--17-06-21.txt  searchTest_2025-03-18--17-07-57.txt
search_test/45_degree/: searchTest_2025-03-18--17-14-35.txt  searchTest_2025-03-18--17-16-47.txt  searchTest_2025-03-18--17-18-29.txt  searchTest_2025-03-18--17-20-11.txt
